Bilateral blur's iterations #50271

Closed
opened 2016-12-18 09:48:45 +01:00 by Serge Lyatin · 9 comments

System Information
Win7 32bit

Blender Version
Broken: 2.78a

Short description of error
It's strange that freshly added node has zero iterations from default, but when its number was increased you can't go back to zero.

Exact steps for others to reproduce the error

  • Go to Compositor add Bilateral Blur node
  • Increase iterations
  • Fail to change back to zero
**System Information** Win7 32bit **Blender Version** Broken: 2.78a **Short description of error** It's strange that freshly added node has zero iterations from default, but when its number was increased you can't go back to zero. **Exact steps for others to reproduce the error** - Go to *Compositor* add *Bilateral Blur* node - Increase iterations - Fail to change back to zero
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Aaron Carlisle self-assigned this 2016-12-20 18:52:46 +01:00
Member

I can confirm. I will try to fix this myself.

I can confirm. I will try to fix this myself.
Aaron Carlisle removed their assignment 2017-04-13 06:58:00 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

IIRC - the bug is that the value is zero in the first place.

IIRC - the bug is that the value is zero in the first place.

Added subscriber: @drehuwann

Added subscriber: @drehuwann
brunoT self-assigned this 2017-04-18 02:28:04 +02:00

hi,
so maybe : diff
(same issue in Directional Blur)

hi, so maybe : [diff ](https://developer.blender.org/D2632) (same issue in Directional Blur)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50271
No description provided.