Fix: T50271: Bilateral/Directional blur's iterations is zero by default

Differential Revision: https://developer.blender.org/D2632